# FoolsErrand

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  EntityFactory.hpp  main.cpp
source/components/: CameraController.hpp  CharacterController.hpp
source/resources/: attributions.txt
source/resources/shaders/: BasicShader.frag
source/systems/: CameraControllerSystem.cpp  CameraControllerSystem.hpp  CharacterControllerSystem.cpp  CharacterControllerSystem.hpp
